# agentic-rag

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
graph/: graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
